# HNG14-Backend-Track

./: .env.example  LICENSE  README.md  SOLUTION.md  STAGE_3_DOCUMENTATION.md  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 163bc7506f9e_add_users_and_refresh_tokens_tables.py  4c011b536bfd_add_profile_indexes.py  58abf52992b5_add_indexes_to_profile_table.py  f8c465babedd_create_profile_table.py
app/core/: auth.py  cache.py  config.py  database.py  limiter.py  logging.py  middleware.py  security.py
app/models/: models.py
app/models/cruds/: profileCrud.py  userCrud.py
app/models/schemas/: genderClassifierSchema.py  profileSchema.py  userSchema.py
app/models/seeders/: profile_seeder.py
app/routers/: auth.py  gender_classifier.py  populators.py  profiles.py
app/services/: csv_processor.py  external_api.py
app/utils/: app_key_generator.py  helpers.py
tests/: conftest.py  test_auth.py  test_ingestion.py  test_profiles.py
