[project]
name = "hng14-backend-track"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "ijson>=3.5.0",
    "psycopg2-binary>=2.9.11",
    "pycountry>=26.2.16",
    "pydantic-settings>=2.13.1",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.49",
    "uuid6>=2025.0.1",
    "uvicorn>=0.44.0",
]
